--- a/security-logout/pom.xml
+++ b/security-logout/pom.xml
@@ -30,6 +30,18 @@
 			<artifactId>jjwt-api</artifactId>
 			<version>0.11.2</version> <!-- Use the appropriate version -->
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson2</artifactId>
+			<version>1.32.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.32.1</version> <!-- Use the latest version available -->
+		</dependency>
+
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
@@ -39,6 +51,11 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.2</version> <!-- Use the appropriate version -->
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version> <!-- Check for the latest version on Maven Central -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
