--- a/security-logout/src/main/resources/application.properties
+++ b/security-logout/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8082
 #spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/jwt_security_logout
 spring.datasource.username=root
-spring.datasource.password=Ami@1234
+spring.datasource.password=mysql123
 # Enable JPA and set the database platform
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
